@@ -54,7 +54,8 @@ DEFAULTS = {
     'UNIHANDECODE_VERSION': None,
     'UNIHANDECODE_DECODERS': ['ja', 'zh', 'kr', 'vn', 'diacritic'],
     'UNIHANDECODE_DEFAULT_DECODER': 'diacritic',
-    'MAX_PAGE_PUBLISH_REVERSIONS': 25,
+    'MAX_PAGE_PUBLISH_REVERSIONS': 10,
+    'MAX_PAGE_HISTORY_REVERSIONS': 15,
 }
 
 
